# learn_demo

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle  versions.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: json_string.json
app/src/main/cpp/: Book.cpp  Book.h  BookManager.cpp  BookManager.h  CMakeLists.txt  MyExcept.h  MyString.cpp  MyString.h  PrintLog.cpp  PrintLog.h  StringTest.h  TemplateDemo.h  Test1.cpp  Test1.h  Test2.cpp  Test2.h  jni_first_test.cpp  jni_frist_test.cpp
app/src/main/res/drawable/: ddcx_shape_time_range.xml
app/src/main/res/layout/: activity_big_image.xml  activity_main.xml  activity_mvvm_layout.xml  activity_two_main_layout.xml  after_follew_item.xml  after_follew_layout.xml  aidl_fragment_layout.xml  algorithm_fragment_layout.xml  architecture_layout.xml  custom_drawable_fragment.xml  custom_view_draw_text_base_line_fragment.xml  fragment_basic_transitions.xml  fragment_constraint_test.xml  fragment_custom_view_1_1.xml  fragment_custom_view_1_2.xml  fragment_custom_view_1_4.xml  fragment_dynamic_animation_layout.xml  fragment_jet_pack.xml  fragment_jni_layout.xml  fragment_mvvm_layout.xml  fragment_task_manager.xml  fragment_thread_tool_layout.xml  fragment_view_animation.xml  (+15 more)
captures/: com.hujiang.designsupportlibrarydemo_2019.01.22_16.54-1.li  com.hujiang.designsupportlibrarydemo_2019.01.22_16.54.li
common/: build.gradle
common/src/main/: AndroidManifest.xml
gradle.learn/: build.gradle  push.gradle
gradle/wrapper/: gradle-wrapper.properties
(+190 files in other folders)
